# Buzzler

./: .gitignore  README.md  copilot.md  database_analysis_feedback.md  docker-compose.debug.yml  docker-compose.yml  file.py  pyrightconfig.json
.zed/: debug.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1f1d8b1cc2c2_initial_migration.py  2d0a9d1f5524_db_improvements_for_auth.py  75e2aacb0ea8_fix_filetype_enum.py  7e21c2ccbb41_auth_fileds_fixes.py  e421ee01b0df_create_new_table_structure.py  f131cbceaf87_initial_migration.py
backend/app/: config.py  main.py
backend/app/api/users/: endpoints.py  user_endpoints.py
backend/app/celery/: celery_app.py  import_tasks.py  import_video.py
backend/app/core/: auth.py  config.py
backend/app/core/auth/: auth_endpoints.py  endpoints.py  helpers_functions.py
backend/app/core/auth__endpoint/: auth_endpoints.py
backend/app/db/: database.py
backend/app/models/: __init__.py  ai_analytics.py  analytics_data.py  audit_logs.py  clip.py  clips.py  content_template.py  enums.py  file_storage.py  post.py  project.py  project_management.py  social_account.py  user.py  video.py
backend/app/schemas/: schema_import_video.py  schema_upload_video.py  user.py
backend/app/services/: azure_storage.py  video_db_service.py  video_services.py
backend/app/tasks/: celery_app.py
backend/app/utils/: azure_upload.py  ffmpeg.py  file_utils.py  validators.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: test_import_video.py
(+53 files in other folders)
